@@ -43,3 +43,7 @@
 
 Зміни в Assignment13Part1:
     - видалено конструктор класу ImageLoader, тепер шлях до файлу передається в метод load(..) як параметр.
+    - в класі Eraser в методах separateSilhouettesMask(..) та findBackgroundMask(..) додано змінні для визначення
+      висоти та ширини зображення, щоб прибрати велику кількість викликів методів getWidth() та getHeight().
+    - в класі SimilarPixelFinder прорахунок квадрата дельти змінено на ціле число для уникнення непотрібних перетворень
+      між типами.
